@@ -1,3 +1,9 @@
+2008-08-04  Jason Xia  <jasonxh@gmail.com>
+
+	* src/downarticledlg.cpp (CDownArticleDlg::DownArticleFunc)
+	src/core/termdata.cpp (CTermData::LineFeed): Fix "Download Article"
+	for PTT site.
+
 2008-07-31  Jason Xia  <jasonxh@gmail.com>
 
 	* src/downarticledlg.cpp (CDownArticleDlg::CDownArticleDlg)
